--- a/index.html
+++ b/index.html
@@ -22,6 +22,10 @@
   </header>
 
   <main>
+    <div id="loading" class="loading" style="display: none;">
+  <div class="loading-spinner"></div>
+  <p class="loading-text">Loading...</p>
+</div>
     <input
       type="text"
       id="searchBox"
