Update placeholder text in search input

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 
   <link rel="stylesheet" href="style.css" />
 </head>
+  <div id="signature">Rauf</div>
 <body>
   <header>
     <h1>Easy Scan</h1>
@@ -29,7 +30,7 @@
     <input
       type="text"
       id="searchBox"
-      placeholder="Enter last 6‑7 digits of barcode or SKU"
+      placeholder="Enter last 6‑7 digits or SKU"
       autocomplete="off"
     />
     <div id="result" role="region" aria-live="polite"></div>
