Update signature text to include an extra dot

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
   <link rel="stylesheet" href="style.css" />
 </head>
-  <div id="signature">Rauf.</div>
+  <div id="signature">Rauf..</div>
 <body>
   <header>
     <h1>Easy Scan</h1>
