Remove ID and style from header title

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <div id="signature">Rauf..</div>
 <body>
   <header>
-    <h1 id="reloadApp" style="cursor:pointer;">Easy Scan</h1>
+    <h1>Easy Scan</h1>
     <div>
       <button id="themeToggle" aria-label="Toggle theme">🌙</button>
     </div>
