--- a/index.html
+++ b/index.html
@@ -23,9 +23,11 @@
   </header>
 
   <main>
-    <div id="loading" class="loading" style="display: none;">
-  <div class="loading-spinner"></div>
-  <p class="loading-text">Loading...</p>
+    <div class="loader-container">
+  <div class="loader-bar">
+    <div class="loader-fill" id="loaderFill" style="width:0%"></div>
+  </div>
+  <div class="loader-text" id="loaderText">Loading... 0%</div>
 </div>
     <input
       type="text"
