--- a/index.html
+++ b/index.html
@@ -27,6 +27,10 @@
   <div class="loading-spinner"></div>
   <p class="loading-text">Loading...</p>
 </div>
+  <div class="search-wrapper">
+  <span class="search-icon">🔍</span>
+  <input id="searchBox" type="text" placeholder="Search barcode...">
+</div>
     <input
       type="text"
       id="searchBox"
