--- a/index.html
+++ b/index.html
@@ -2,36 +2,29 @@
 <html lang="en" data-theme="light">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Easy Scan</title>
 
-  <!-- Manifest -->
-  <link rel="manifest" href="manifest.json">
-  <meta name="theme-color" content="#FFD700"/>
+  <link rel="manifest" href="manifest.json" />
+  <meta name="theme-color" content="#FFD700" />
 
-  <!-- Icons -->
-  <link rel="icon" href="icons/icon-192.png" sizes="192x192">
-  <link rel="apple-touch-icon" href="icons/icon-512.png">
+  <link rel="icon" href="icons/icon-192.png" sizes="192x192" />
+  <link rel="apple-touch-icon" href="icons/icon-512.png" />
 
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="style.css" />
 </head>
 
 <body>
 
-  <!-- Signature (fixed position) -->
-  <div id="signature">Rauf..</div>
-
-  <!-- Header -->
+  <!-- HEADER -->
   <header>
     <h1>Easy Scan</h1>
     <button id="themeToggle" aria-label="Toggle theme">🌙</button>
   </header>
 
-  <!-- Main Content -->
+  <!-- SEARCH BAR ALWAYS UNDER HEADER -->
   <main>
 
-    <!-- SEARCH BAR ALWAYS FIRST -->
     <input
       type="text"
       id="searchBox"
@@ -39,19 +32,21 @@
       autocomplete="off"
     />
 
-    <!-- RESULTS BELOW SEARCH BAR -->
+    <!-- RESULT AREA UNDER SEARCH BAR -->
     <div id="result" role="region" aria-live="polite"></div>
 
   </main>
 
+  <!-- SIGNATURE FIXED AT BOTTOM RIGHT -->
+  <div id="signature">Rauf..</div>
+
   <script src="script.js"></script>
 
-  <!-- Service Worker -->
   <script>
-    if ('serviceWorker' in navigator) {
-      navigator.serviceWorker.register('service-worker.js')
-        .then(() => console.log("Service Worker Registered"))
-        .catch(err => console.warn("SW failed", err));
+    if ("serviceWorker" in navigator) {
+      navigator.serviceWorker.register("service-worker.js")
+        .then(() => console.log("Service Worker registered"))
+        .catch(e => console.warn("SW register failed", e));
     }
   </script>
 
