--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 <body>
   <header>
-    <h1 id="reloadData">Easy Scan</h1>
+    <h1 id="refreshDataBtn">Easy Scan</h1>
     <button id="themeToggle" aria-label="Toggle theme">🌙</button>
   </header>
 
