Add search history panel to index.html

--- a/index.html
+++ b/index.html
@@ -35,6 +35,15 @@
       />
     </div>
 
+    <!-- HISTORY PANEL -->
+<div id="historyPanel">
+  <div id="historyHeader">
+    <span>Search History</span>
+    <button id="clearHistoryBtn">✕</button>
+  </div>
+  <div id="historyList"></div>
+</div>
+    
     <!-- Result area (loader + cards appear here) -->
     <div id="result" role="region" aria-live="polite"></div>
   </main>
