Add history button to header in index.html

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
   <header>
     <h1 id="refreshDataButton">Easy Scan</h1>
     <button id="themeToggle" aria-label="Toggle theme">🌙</button>
+    <button id="historyBtn">📜</button>
   </header>
 
   <main>
