Add search history panel to index.html

--- a/index.html
+++ b/index.html
@@ -52,6 +52,10 @@
         .then(() => console.log('Service Worker registered'))
         .catch(e => console.warn('SW register failed', e));
     }
+    <div id="historyPanel">
+  <div class="history-header">Search History</div>
+  <div id="historyList"></div>
+</div>
   </script>
 </body>
 </html>
