--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 </head>
 
 <body>
+<div id="swipeZone"></div>
   <header>
     <h1 id="refreshDataButton">Easy Scan</h1>
     <button id="themeToggle" aria-label="Toggle theme">🌙</button>
@@ -53,5 +54,12 @@
         .catch(e => console.warn('SW register failed', e));
     }
   </script>
+<!-- =======================
+      SEARCH HISTORY PANEL
+======================= -->
+<div id="historyPanel" class="history-panel">
+  <div class="history-header">Search History</div>
+  <div id="historyList" class="history-list"></div>
+</div>
 </body>
 </html>
