Add search history bottom sheet to index.html

--- a/index.html
+++ b/index.html
@@ -39,6 +39,13 @@
     <div id="result" role="region" aria-live="polite"></div>
   </main>
 
+  <!-- 🔽 SEARCH HISTORY BOTTOM SHEET -->
+<div id="historySheet">
+  <div id="historyHandle"></div>
+  <div id="historyHeader">Search History</div>
+  <div id="historyList"></div>
+</div>
+  
   <div id="signature">Rauf..</div>
 
   <!-- Main script -->
