Refactor search history bottom sheet structure

--- a/index.html
+++ b/index.html
@@ -39,11 +39,14 @@
     <div id="result" role="region" aria-live="polite"></div>
   </main>
 
-  <!-- 🔽 SEARCH HISTORY BOTTOM SHEET -->
+  <!-- Bottom Drag Zone -->
+<div id="historyDragZone"></div>
+
+<!-- Bottom Sheet -->
 <div id="historySheet">
-  <div id="historyHandle"></div>
-  <div id="historyHeader">Search History</div>
-  <div id="historyList"></div>
+  <div class="history-handle"></div>
+  <div class="history-title">Search History</div>
+  <div id="historyList" class="history-scroll"></div>
 </div>
   
   <div id="signature">Rauf..</div>
