--- a/index.html
+++ b/index.html
@@ -2,56 +2,40 @@
 <html lang="en" data-theme="light">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Easy Scan</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" />
+  <title>Quick Scan</title>
 
-  <link rel="manifest" href="manifest.json" />
-  <meta name="theme-color" content="#FFD700" />
-
-  <link rel="icon" href="icons/icon-192.png" sizes="192x192" />
-  <link rel="apple-touch-icon" href="icons/icon-512.png" />
-
-  <link rel="stylesheet" href="style.css" />
-
-  <!--Add JsBarcode for offline barcode generation -->
-  <script src="https://cdn.jsdelivr.net/npm/jsbarcode@3.11.5/dist/JsBarcode.all.min.js"></script>
+  <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-  <header>
-    <h1 id="refreshDataButton">Easy Scan</h1>
-    <button id="themeToggle" aria-label="Toggle theme">🌙</button>
+
+  <!-- HEADER -->
+  <header class="top-bar glass">
+    <div class="app-title">Easy Scan</div>
+    <button id="themeToggle">🌙</button>
   </header>
 
-  <main>
-    <!-- Search bar directly under header -->
-    <div class="search-wrap">
-      <input
-        type="text"
-        id="searchBox"
-        placeholder="Enter last 6-7 digits or SKU"
-        autocomplete="off"
-        aria-label="Search"
-      />
-    </div>
+  <!-- SEARCH -->
+  <div class="search-wrapper glass">
+    <input
+      id="searchBox"
+      type="text"
+      placeholder="Search barcode or SKU"
+      autocomplete="off"
+    />
+  </div>
 
-    <!-- Result area (loader + cards appear here) -->
-    <div id="result" role="region" aria-live="polite"></div>
-  </main>
+  <!-- RESULT -->
+  <div id="result"></div>
 
-  <div id="signature">Rauf..</div>
+  <!-- HISTORY BOTTOM SHEET -->
+  <div id="historySheet">
+    <div class="history-header">Search History</div>
+    <div id="historyList"></div>
+  </div>
 
-  <!-- Main script -->
-  <script src="script.js"></script>
-
-  <!-- Service worker -->
-  <script>
-    if ('serviceWorker' in navigator) {
-      navigator.serviceWorker
-        .register('service-worker.js')
-        .then(() => console.log('Service Worker registered'))
-        .catch(e => console.warn('SW register failed', e));
-    }
-  </script>
+  <script src="https://cdn.jsdelivr.net/npm/jsbarcode@3.11.5/dist/JsBarcode.all.min.js"></script>
+  <script src="app.js"></script>
 </body>
 </html>
