Update signature text in index.html

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <div id="result" role="region" aria-live="polite"></div>
   </main>
 
-  <div id="signature">Rauf..</div>
+  <div id="signature">..</div>
 
   <!-- Main script -->
   <script src="script.js"></script>
